--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
     "next": "14.2.24",
+    "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
