--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
-    "next": "14.2.24",
+    "next": "^latest",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
     "react": "^18",
