--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
-    "next": "^latest",
+    "next": "latest",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
     "react": "^18",
