--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.3.24",
+    "googleapis": "^146.0.0",
     "lucide-react": "^0.479.0",
     "next": "latest",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "radix-ui": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
