--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "codemod": "^0.18.3",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.3.24",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.479.0",
-    "next": "latest",
+    "next": "^14.2.24",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "radix-ui": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "sharp": "^0.33.5",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
